--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>
     </title>
-    <link rel="stylesheet" type="text/css" href="https://nknwallet.io/WebWallet/load.css" />
-    <link ref="stylesheet" href="https://nknwallet.io/WebWallet/bundle.css" />
+    <link rel="stylesheet" type="text/css" href="https://nknwallet.io/wallet/load.css" />
+    <link ref="stylesheet" href="https://nknwallet.io/wallet/bundle.css" />
   </head>
   <body>
     <div id="root">
@@ -19,6 +19,6 @@
         </div>
       </div>
     </div>
-    <script src="https://nknwallet.io/WebWallet/bundle.js"></script>
+    <script src="https://nknwallet.io/wallet/bundle.js"></script>
   </body>
 </html>
