--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <meta name="theme-color" content="#ffffff">
     <title>NKN WALLET</title>
     <link rel="stylesheet" type="text/css" href="https://nknwallet.io/wallet/load.css" />
-    <link ref="stylesheet" href="https://nknwallet.io/wallet/bundle.css" />
+    <link ref="stylesheet" type="text/css" href="https://nknwallet.io/wallet/bundle.css" />
   </head>
   <body>
     <div id="root">
